--- a/gasto.css
+++ b/gasto.css
@@ -1,21 +1,65 @@
-/* Definições globais */
-body {
-    font-family: Arial, sans-serif;
+/* Estilos globais */
+* {
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    box-sizing: border-box;
 }
 
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    min-height: 100vh;
+}
+
+/* Cabeçalho */
 header {
     background-color: #4CAF50;
     color: white;
-    padding: 20px;
-    text-align: center;
+    width: 100%;
+    padding: 1rem;
+    margin-bottom: 2rem;
+    display: flex; /* Usa Flexbox para organizar os elementos */
+    align-items: center; /* Alinha os itens verticalmente */
 }
 
-h1 {
-    margin: 0;
-    margin-bottom: 15px; /* Adiciona uma margem abaixo do h1 */
+/* Contêiner do GIF ou imagem */
+.gif-container {
+    margin-right: -8rem;
+    margin-left: 3rem; /* Espaço entre a imagem e a borda esquerda */
+}
+
+.gif-container img {
+    width: 50px; /* Define a largura da imagem */
+    height: auto; /* Mantém a proporção */
+}
+
+/* Contêiner do título e links */
+.header-content {
+    text-align: center; /* Centraliza o título e os links */
+    flex-grow: 1; /* Faz com que o conteúdo ocupe o espaço restante */
+}
+
+/* Estilo do título */
+header h1 {
+    font-size: 2rem;
+    margin-bottom: 15px; /* Adiciona uma margem abaixo do título */
+}
+
+/* Links */
+header a {
+    color: white;
+    text-decoration: none; /* Remove o sublinhado */
+    font-size: 14px; /* Ajusta o tamanho da fonte */
+    margin-right: 15px; /* Espaçamento entre os links */
+}
+
+header a:hover {
+    color: #ddd; /* Altera a cor ao passar o mouse */
 }
 
 h2 {
@@ -29,21 +73,10 @@ main {
     padding: 20px;
 }
 
-header a {
-    color: white;
-    text-decoration: none; /* Sublinha o texto como um link */
-    font-size: 14px; /* Diminui o tamanho da fonte, ajuste conforme necessário */
-    margin-right: 15px; /* Adiciona um espaço à direita de cada link */
-}
-
-header a:hover {
-    color: #ddd; /* Altera a cor ao passar o mouse */
-}
-
 /* Seção de ações */
 .actions {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     margin-bottom: 20px;
 }
 
